syntax = "proto3";
package imageview;
import "github.com/overcyn/mochi/pb/text.proto";

option go_package = "pb";
option objc_class_prefix = "MochiPB";

message Image {
    int64 width = 1;
    int64 height = 2;
    int64 stride = 4;
    bytes data = 3;
}

enum ResizeMode {
    FIT = 0;
    FILL = 1;
    STRETCH = 2;
    CENTER = 3;
}

message ImageView {
    Image image = 1;
    ResizeMode resizeMode = 2;
    text.Color tint = 3;
}
